<resources>
    <string name="app_name">Dice Roller</string>
    <string name="feliz_aniversario_luiz">Feliz Aniversário Luiz</string>
    <string name="roll_label">Roll</string>
    <string name="dice_rolled">Dice Rolled!</string>
    <string name="roll_the_dice">Roll the dice</string>
    <string name="d6">D6</string>
    <string name="d10">D10</string>
    <string name="d20">D20</string>
</resources>