<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <TextView
        android:id="@+id/diceNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="250dp"
        android:textSize="50sp"
        android:layout_marginBottom="50dp"
        android:text="@string/roll_the_dice" />

    <Button
        android:id="@+id/rollButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/diceNumber"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"
        android:layout_marginTop="70dp"
        android:text="@string/roll_label" />

    <Button
        android:id="@+id/buttonSizeSix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rollButton"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_centerHorizontal="true"
        android:textSize="25sp"
        android:layout_marginTop="30dp"
        android:text="@string/d6" />

    <Button
        android:id="@+id/buttonSizeTen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/buttonSizeSix"
        android:layout_below="@id/rollButton"
        android:layout_centerHorizontal="true"
        android:textSize="25sp"
        android:layout_marginTop="30dp"
        android:text="@string/d10" />

    <Button
        android:id="@+id/buttonSizeTwenty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@id/buttonSizeSix"
        android:layout_below="@id/rollButton"
        android:layout_centerHorizontal="true"
        android:textSize="25sp"
        android:layout_marginTop="30dp"
        android:text="@string/d20" />

</RelativeLayout>